--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -44,11 +44,14 @@ jobs:
         python ./utils/getvless.py
     - name: Commit
       run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git add ./links
-        git commit -m "vless节点更新时间 $(date '+%Y-%m-%d %H:%M:%S')"
-        git config pull.rebase false
-        git pull origin master
-        git push origin master
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add links
+        if ! git diff --cached --quiet; then
+          git commit -m "vless节点更新时间 $(date '+%Y-%m-%d %H:%M:%S')"
+          git pull --ff-only origin master
+          git push origin master
+        else
+          echo "No changes to commit"
+        fi
 
